override_macro_tests/src/compile_errors/e04_override_with_on_other_item.rs
use override_macro::{overridable, override_with};

#[overridable]
trait Trait04A {}

#[override_with(Trait04A)]
trait Trait04B {}

fn main() {
}
